--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "parcel": "^2.16.0"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.14",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-router": "^7.9.3"
+    "react-router": "^7.9.3",
+    "tailwindcss": "^4.1.14"
   }
 }
